--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
     <header>
+        <h1>View Your Weather</h1>
         <form action="">
             <input type="text" name="city-name" id="city-name">
             <input type="submit" value="Search">
