Add degree symbols

--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
 
 <body>
     <header>
-        <h1>View Your Weather</h1>
-        <form action="">
+        <h1>Enter Your City</h1>
+        <form id='city-search-form' action="">
             <input type="text" name="city-name" id="city-name">
             <input type="submit" value="Search">
         </form>
     </header>
     <main>
         <h2 id="city">Carteret</h2>
-        <h3 id="current-temp">38</h3>
+        <h3 id="current-temp">38°</h3>
         <h4 id="weather-name">Mostly Clear</h4>
         <div>
-            <p id="high-temp">H:57</p>
-            <p id="low-temp">L:34</p>
+            <p id="high-temp">H:57°</p>
+            <p id="low-temp">L:34°</p>
         </div>
     </main>
 
