--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="app.js"></script>
+    <script type='text/javascript' src="config.js"></script>
+    <script type='text/javascript' src="app.js"></script>
 </body>
 
 </html>
